# bitmap

./: .gitmodules  CMakeLists.txt
inc/: bmp.h  generic.h  mainFrame.h
src/: bmp.cpp  generic.cpp  main.cpp  mainFrame.cpp
